tests/errors/unresolved-local.spcasmtest
org 0
global_label:

mov a,.local_that_is_missing
